Fix set-default button alignment in my-services list

--- a/app/stylesheet/data-table.scss
+++ b/app/stylesheet/data-table.scss
@@ -33,6 +33,7 @@
 
   .miq-fieldset .miq-fieldset-content {
     margin-top: 0;
+    height: 2.5rem;
   }
   .cds--btn.default_button {
     display: flex;
